fix(test): stabilize auth and scraper tests before PR